--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: python3.10-slim
+    #container: python3.10-slim
     steps:
         - name: Build project
           uses: actions/checkout@v4
