--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,26 +2,79 @@ name: "CD Build"
 
 on:
   workflow_run:
-    workflow: ["CI Build"]
-      types:
-      - completed
+    workflows: ["CI Build"]
+    branches: [main]
+
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  ECR_URL: ${{ secrets.ECR_URL }}
+  ECR_REPO: ${{ secrets.ECR_REPO }}
+
 jobs:
-  deploy:
+  build-and-push-ecr-image:
+    name: Continuous Delivery
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+      
     steps:
-        - name: Build project
-          uses: actions/checkout@v4
-
-        - name: Setup python
-          uses: actions/setup-python@v5
-          with: 
-            python-version: '3.10'
-
-        - name: Install dependencies
-          run: pip install -r requirements.txt
-
-        - name: Compose docker containers
-          run: docker compose up
-
+      - name: Build project
+        uses: actions/checkout@v4
         
+      - name: Installing utilities
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq unzip
+
+      - name: Configuring AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id:  ${{ secrets.AWS_LOGIN_ACCESS_ID}}
+          aws-secret-access-key: ${{ secrets.AWS_LOGIN_ACCESS_KEY}}
+          aws-region: ${{ secrets.AWS_REGION}}
+        
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+        # Backend Image
+
+      - name: Build, tag, and push backend image
+        run: |
+           docker build -t $ECR_URL/$ECR_REPO:backend -f api/Dockerfile .
+           docker push $ECR_URL/$ECR_REPO:backend
+        # Frontend Image
+
+      - name: Build, tag, and push frontend image
+        run: |
+          docker build -t $ECR_URL/$ECR_REPO:frontend -f streamlit_app/Dockerfile .
+          docker push $ECR_URL/$ECR_REPO:frontend
+      
+
+
+  continuous-deployment:
+    name: Continuous Deployment
+    needs: build-and-push-ecr-image
+    runs-on: self-hosted
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credientials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id:  ${{ secrets.AWS_LOGIN_ACCESS_ID}}
+          aws-secret-access-key: ${{ secrets.AWS_LOGIN_ACCESS_KEY}}
+          aws-region: ${{ secrets.AWS_REGION}}
+
+      - name: Login into ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      
+      - name: Pulling Docker images
+        run: |
+          # Removing old images to avoid unnessacary disk usage on EC2
+          docker system prune -af
+          docker-compose pull
+          docker-compose up -d
