--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,6 +22,15 @@ jobs:
             python-version: '3.10'
         - name: Install Dependencies
           run: pip install -r requirements.txt
+        
+        # Caching pip files to avoid redundant installation of packages
+        - name: Cache pip
+          uses: actions/cache@v3
+          with:
+            path: ~/.cache/pip
+            key: ${{ runner.os }}-pip-${{ hashfiles('**/requirements.txt')}}
+            restore-keys: |
+              ${{ runner.os }}-pip-
 
         - name: Run unit tests
           run: |
