--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,21 +25,23 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Configuring AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id:  ${{ secrets.AWS_LOGIN_ACCESS_ID}}
           aws-secret-access-key: ${{ secrets.AWS_LOGIN_ACCESS_KEY}}
           aws-region: ${{ secrets.AWS_REGION}}
-        
+    
+      
       - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        run: |
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ env.ECR_URL }}
+          
 
-
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      
         # Backend Image
 
       - name: Build, tag, and push backend image
@@ -65,7 +67,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure AWS Credientials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id:  ${{ secrets.AWS_LOGIN_ACCESS_ID}}
           aws-secret-access-key: ${{ secrets.AWS_LOGIN_ACCESS_KEY}}
