--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,8 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  ECR_URL: ${{ secrets.ECR_AUTH_URI }}
+  ECR_AUTH_URL: ${{ secrets.ECR_AUTH_URI }}
+  ECR_URL: ${{ secrets.ECR_URL }}
   ECR_REPO: ${{ secrets.ECR_REPO }}
 
 jobs:
@@ -28,7 +29,7 @@ jobs:
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
           sudo ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli --update
-          
+
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -42,9 +43,8 @@ jobs:
       
       - name: Login to Amazon ECR
         run: |
-          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ env.ECR_URL }}
-          
-
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ env.ECR_AUTH_URL }}
+          aws ecr-public create-repository --repository-name $ECR_REPO --region us-east-1
       
         # Backend Image
 
