--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -84,6 +84,6 @@ jobs:
       - name: Pulling Docker images
         run: |
           # Removing old images to avoid unnessacary disk usage on EC2
-          docker system prune -af
-          docker-compose pull
-          docker-compose up -d
+          sudo docker system prune -af
+          sudo docker-compose pull
+          sudo docker-compose up -d
