--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -90,5 +90,5 @@ jobs:
         run: |
           # Removing old images to avoid unnessacary disk usage on EC2
           sudo docker system prune -af
-          sudo docker-compose pull
-          sudo docker-compose up -d
+          sudo docker compose pull
+          sudo docker compose up -d
