--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -85,8 +85,15 @@ jobs:
       - name: Login into ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      
+      - name: Generate .env file for Docker Compose
+        run: |
+          echo "ECR_REPO=${{ secrets.ECR_REPO }}" > .env
+          echo "ECR_URL=${{ secrets.ECR_URL }}" >> .env
+
       - name: Pulling Docker images
+        env:
+          ECR_URL: ${{ secrets.ECR_URL }}
+          ECR_REPO: ${{ secrets.ECR_REPO }}
         run: |
           # Removing old images to avoid unnessacary disk usage on EC2
           sudo docker system prune -af
