--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,5 +7,5 @@ RUN pip install --upgrade pip && pip install -r requirements.txt
 
 COPY ./api /app/api
 
-CMD ["python", "-m", "uvicorn", "api.app:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "-m", "uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
 
